@@ -52,6 +52,11 @@ Disassembly of section .text:
 [ 	]*[a-f0-9]+:	48 0f c3 00          	movnti %rax,\(%rax\)
 [ 	]*[a-f0-9]+:	4d 0f c3 00          	movnti %r8,\(%r8\)
 [ 	]*[a-f0-9]+:	4c 0f c3 00          	movnti %r8,\(%rax\)
+[ 	]*[a-f0-9]+:	e2 fe                	loop   0x[0-9a-f]+
+[ 	]*[a-f0-9]+:	e2 fe                	loop   0x[0-9a-f]+
+[ 	]*[a-f0-9]+:	67 e2 fd             	loopl  0x[0-9a-f]+
+[ 	]*[a-f0-9]+:	e3 fe                	jrcxz  0x[0-9a-f]+
+[ 	]*[a-f0-9]+:	67 e3 fd             	jecxz  0x[0-9a-f]+
 [ 	]*[a-f0-9]+:	41 f6 38             	idivb  \(%r8\)
 [ 	]*[a-f0-9]+:	f6 38                	idivb  \(%rax\)
 [ 	]*[a-f0-9]+:	66 41 f7 38          	idivw  \(%r8\)
