@@ -1,3 +1,10 @@
+2013-04-08  Jan Beulich <jbeulich@suse.com>
+
+	* gas/i386/x86-64-opcode.s: Flesh out LOOP and J*CXZ sections.
+	Correct comments in Jcc section.
+	* gas/i386/x86-64-opcode.d: Refresh.
+	* gas/i386/ilp32/x86-64-opcode.d: Refresh.
+
 2013-04-06  David S. Miller  <davem@davemloft.net>
 
 	* gas/sparc/cbcond.s: Add tests for new opcode aliases.
